fix(images): set image size to avoid (cls) cumulative layout shift

--- a/src/containers/sectionCover/sectionCover.style.scss
+++ b/src/containers/sectionCover/sectionCover.style.scss
@@ -23,7 +23,7 @@
   }
 
   &__imageText {
-    width: 70%;
+    width: 100%;
   }
 
   &__scrollButton {
